--- a/canonical-blogposts.html
+++ b/canonical-blogposts.html
@@ -89,7 +89,7 @@
         .then(out => out.slice(0, 3).forEach(post => {
             const publishDate = new Date(post.date)
             const postNode = template.content.cloneNode(true);
-            postNode.querySelector("#image-link").src = post.link;
+            postNode.querySelector("#image-link").href = post.link;
             postNode.querySelector("#image-link").removeAttribute('id');
             postNode.querySelector("#image").src = post.featured_media;
             postNode.querySelector("#image").removeAttribute('id');
